name:                lovelace
version:             0.0.1
Cabal-Version:       >= 1.8
synopsis:            A toy workflow system.
description:         A toy workflow system.
category:            Development
license:             BSD2
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
homepage:            http://noteed.com/lovelace
bug-reports:         https://github.com/noteed/lovelace/issues
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/noteed/lovelace

library
  build-depends:       aeson,
                       base == 4.*,
                       text,
                       unordered-containers
  exposed-modules:     Lovelace
  ghc-options:         -Wall

test-suite test-suite
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    bin/test-suite.hs
  build-depends:  base,
                  lovelace,
                  tasty,
                  tasty-quickcheck,
                  tasty-smallcheck,
                  tasty-hunit
